# secretbank

./: .env.example  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE_FAQ.md  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.json
ee/: LICENSE  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/api-vault-app/: Cargo.toml  build.rs
src-tauri/crates/api-vault-app/src/: audit_ctx.rs  context.rs  entitlement.rs  lib.rs  main.rs  setup.rs
src-tauri/crates/api-vault-app/src/commands/: audit.rs  auth.rs  clipboard.rs  credentials.rs  credit_card.rs  deployments.rs  entitlement.rs  github.rs  graph.rs  import.rs  incidents.rs  issuer.rs  kill_switch.rs  mod.rs  pairing.rs  projects.rs  railguard.rs  scanner.rs  security_check.rs  settings.rs  supply.rs  sync.rs  usage.rs  vault.rs  vault_settings.rs
src-tauri/crates/api-vault-app/src/import/: mod.rs
src-tauri/crates/api-vault-audit/: Cargo.toml
src-tauri/crates/api-vault-audit/src/: chain.rs  lib.rs  types.rs
src-tauri/crates/api-vault-charter/: Cargo.toml
src-tauri/crates/api-vault-charter/src/: charter.rs  envelope.rs  lib.rs  shamir.rs  wordlist.rs
src-tauri/crates/api-vault-cli/: Cargo.toml
src-tauri/crates/api-vault-cli/src/: main.rs
src-tauri/crates/api-vault-connectors/: Cargo.toml
src-tauri/crates/api-vault-connectors/src/: lib.rs  types.rs
src-tauri/crates/api-vault-core/: Cargo.toml
src-tauri/crates/api-vault-core/src/: blast_radius.rs  graph.rs  id.rs  lib.rs  security_score.rs
src-tauri/crates/api-vault-core/tests/: serde_roundtrip_test.rs
src-tauri/crates/api-vault-crypto/: Cargo.toml
src-tauri/crates/api-vault-crypto/src/: aead.rs  kdf.rs  lib.rs  os_keyring.rs
src-tauri/crates/api-vault-crypto/tests/: kdf_test.rs  os_keyring_test.rs
src-tauri/crates/api-vault-feeds/: Cargo.toml
src-tauri/crates/api-vault-feeds/src/: ghsa.rs  hibp.rs  lib.rs  matcher.rs  nvd.rs  pwned_passwords.rs  rss.rs  sources.rs  twofa_directory.rs
src-tauri/crates/api-vault-mcp/: Cargo.toml
src-tauri/crates/api-vault-mcp/src/: main.rs
src-tauri/crates/api-vault-railguard/: Cargo.toml
src-tauri/crates/api-vault-railguard/src/: lib.rs
src-tauri/crates/api-vault-railguard/templates/: claude_md.tpl  copilot_instructions.tpl  cursorrules.tpl
src-tauri/crates/api-vault-railguard/tests/: snapshot.rs
src-tauri/crates/api-vault-storage/: Cargo.toml
src-tauri/crates/api-vault-storage/migrations/: 0001_init.sql  0003_reset_audit_log.sql  0009_issuer_domains.sql  0011_security_alerts.sql
src-tauri/crates/api-vault-storage/src/: lib.rs
src-tauri/crates/api-vault-storage/tests/: age_vault_integration.rs  credential_vault_integration.rs  migration_test.rs  repo_credential_test.rs  repo_issuer_test.rs  repo_project_test.rs  repo_usage_test.rs  vault_commands_test.rs  vault_mock_contract.rs
src-tauri/crates/api-vault-supply/: Cargo.toml
src-tauri/crates/api-vault-supply/src/: advisory.rs  ecosystem.rs  lib.rs  lockfile.rs  manifest.rs  matcher.rs  range_eval.rs
src-tauri/crates/api-vault-sync/: Cargo.toml
src-tauri/crates/api-vault-sync/src/: lib.rs
src-tauri/crates/secretbank-app/: Cargo.toml  build.rs
src-tauri/crates/secretbank-app/src/: audit_ctx.rs  context.rs  entitlement.rs  lib.rs  setup.rs
src-tauri/crates/secretbank-audit/: Cargo.toml
src-tauri/crates/secretbank-audit/src/: actions.rs  chain.rs  lib.rs  types.rs
src-tauri/crates/secretbank-charter/: Cargo.toml
src-tauri/crates/secretbank-charter/src/: wordlist.rs
src-tauri/crates/secretbank-cli/: Cargo.toml
src-tauri/crates/secretbank-cli/src/: main.rs
src-tauri/crates/secretbank-connectors/: Cargo.toml
src-tauri/crates/secretbank-connectors/src/: lib.rs  types.rs
src-tauri/crates/secretbank-core/: Cargo.toml
src-tauri/crates/secretbank-core/src/: blast_radius.rs  graph.rs  lib.rs  security_score.rs
src-tauri/crates/secretbank-core/tests/: serde_roundtrip_test.rs
src-tauri/crates/secretbank-crypto/: Cargo.toml
src-tauri/crates/secretbank-crypto/src/: lib.rs  os_keyring.rs  pairing.rs
src-tauri/crates/secretbank-crypto/tests/: kdf_test.rs  os_keyring_test.rs
src-tauri/crates/secretbank-feeds/: Cargo.toml
src-tauri/crates/secretbank-feeds/src/: ghsa.rs  hibp.rs  lib.rs  matcher.rs  nvd.rs  pwned_passwords.rs  rss.rs  security_check.rs  sources.rs  twofa_directory.rs
src-tauri/crates/secretbank-mcp/: Cargo.toml
src-tauri/crates/secretbank-mcp/src/: main.rs  queue.rs
src-tauri/crates/secretbank-nm-host/: Cargo.toml
src-tauri/crates/secretbank-nm-host/src/: bridge_client.rs  installer.rs  lib.rs  main.rs  pairing.rs  protocol.rs  session.rs
src-tauri/crates/secretbank-nm-host/tests/: installer_test.rs  protocol_roundtrip.rs
src-tauri/crates/secretbank-railguard/: Cargo.toml
src-tauri/crates/secretbank-railguard/templates/: windsurfrules.tpl
src-tauri/crates/secretbank-railguard/tests/: snapshot.rs
src-tauri/crates/secretbank-storage/: Cargo.toml
src-tauri/crates/secretbank-storage/migrations/: 0002_incident_unique.sql  0004_incident_match_unique.sql  0005_supply.sql  0006_credential_kind.sql  0007_credential_value_pair.sql  0008_issuer_pair_labels.sql  0010_incident_domain.sql  0012_credit_card.sql  0013_audit_log_actor_extension.sql  0014_issuer_recipes.sql  0015_audit_seq_reindex.sql  0016_credential_custom_kind.sql
src-tauri/crates/secretbank-storage/src/: lib.rs
src-tauri/crates/secretbank-storage/tests/: age_vault_integration.rs  credential_vault_integration.rs  migration_test.rs  repo_credential_test.rs  repo_issuer_test.rs  repo_project_test.rs  repo_usage_test.rs  vault_commands_test.rs  vault_mock_contract.rs
src-tauri/crates/secretbank-supply/: Cargo.toml
src-tauri/crates/secretbank-supply/src/: advisory.rs  lib.rs  lockfile.rs  manifest.rs  range_eval.rs
src-tauri/crates/secretbank-sync/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+733 files in other folders)
