[workspace]
members = ["crates/*"]
resolver = "2"
exclude = []

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "uuid"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ID / time
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# Cryptography
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
hex = "0.4"

# Async trait support
async-trait = "0.1"

# Graph
petgraph = "0.8"

# Rate limiting
governor = "0.10"

# Cancellation token (scheduler)
tokio-util = { version = "0.7", features = ["rt"] }

# Feed parsing
feed-rs = "2"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# URL encoding
urlencoding = "2"

# URL parsing
url = "2.5"

# Base64url (M8 — relay salt_auth/salt_enc 디코드)
base64 = "0.22"

# File scanning / env parsing
regex = "1"
ignore = "0.4"
once_cell = "1"

# CSV parsing (M24 import)
csv = "1"

# Manifest parsing (M20)
toml = "0.8"
semver = { version = "1", features = ["serde"] }
serde_yaml = "0.9"

# CLI (M18)
clap = { version = "4", features = ["derive"] }
rpassword = "7"
directories = "5"
arboard = "3"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"

[package]
name = "api-vault"
version = "0.1.0-pre10"
edition = "2021"
description = "API Vault — Bitwarden for APIs with dependency graph"
authors = ["api-vault contributors"]
license = "AGPL-3.0-or-later"

[[bin]]
name = "api-vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
# Required by `tauri::generate_context!` macro expansion
serde = { workspace = true }
serde_json = { workspace = true }
api-vault-app = { path = "crates/api-vault-app" }

# Plugin deps mirrored here so tauri_build::build() can validate capabilities
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
