[package]
name = "api-vault-app"
version = "0.1.0"
description = "API Vault runtime — Tauri builder and command registration"
authors = ["api-vault contributors"]
edition = "2021"

[lib]
name = "api_vault_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Tauri plugins (common)
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"

# updater: desktop-only (Windows, macOS, Linux).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# biometric: mobile-only (Android, iOS)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
