[package]
name = "api-vault-app"
version = "0.1.0-pre10"
description = "API Vault runtime — Tauri builder and command registration"
authors = ["api-vault contributors"]
edition = "2021"

[lib]
name = "api_vault_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["tauri-plugins"]
tauri-plugins = [
    "dep:tauri-plugin-sql",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-os",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-http",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-biometric",
]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }

sqlx = { workspace = true }
api-vault-core = { path = "../api-vault-core" }
api-vault-storage = { path = "../api-vault-storage" }
api-vault-crypto = { path = "../api-vault-crypto" }
api-vault-connectors = { path = "../api-vault-connectors" }
api-vault-feeds = { path = "../api-vault-feeds" }
api-vault-railguard = { path = "../api-vault-railguard" }
api-vault-audit = { path = "../api-vault-audit" }
api-vault-supply = { path = "../api-vault-supply" }
api-vault-charter = { path = "../api-vault-charter" }
tokio-util = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Relay client (M8 Auth — services/relay_client.rs)
reqwest = { workspace = true }
url = "2"

# Relay salt (base64url) → KDF (T085)
base64 = { workspace = true }

# Tauri plugins (optional — disabled in test builds to skip problematic build scripts)
tauri-plugin-sql      = { version = "2", features = ["sqlite"], optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-shell    = { version = "2", optional = true }
tauri-plugin-os       = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-http     = { version = "2", optional = true }
tauri-plugin-fs       = { version = "2", optional = true }

# updater: desktop-only (Windows, macOS, Linux).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }

# biometric: mobile-only (Android, iOS)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = { version = "2", optional = true }

[dev-dependencies]
api-vault-storage = { path = "../api-vault-storage", features = ["mock"] }
# test-util: tokio::time::pause / advance / start_paused 사용을 위해 필요
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tempfile = "3"
secrecy = { workspace = true }
wiremock = "0.6"
ulid = { workspace = true }
