[package]
name = "api-vault-charter"
version = "0.1.0"
edition = "2021"
description = "Vault Charter — Diceware-based recovery codec + Shamir 2-of-3 split for API Vault"

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# KDF + AEAD — charter secret (78-bit) → charter_key (32B) → enc_key envelope
argon2 = { workspace = true }
hkdf = { workspace = true }
chacha20poly1305 = { workspace = true }

# Shamir Secret Sharing (2-of-3 split)
sharks = "0.5"
