[package]
name = "api-vault-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
