[package]
name = "api-vault-connectors"
version = "0.1.0-pre10"
edition = "2021"

[features]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
csv = { workspace = true }
url = { workspace = true }
api-vault-core = { path = "../api-vault-core" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
