[package]
name = "api-vault-feeds"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
