[package]
name = "api-vault-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
api-vault-core = { path = "../api-vault-core" }
sqlx      = { workspace = true }
tokio     = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
ulid      = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
secrecy   = { workspace = true }
zeroize   = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx  = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "uuid"] }
api-vault-core = { path = "../api-vault-core" }
