[package]
name = "api-vault-storage"
version = "0.1.0-pre10"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
api-vault-core = { path = "../api-vault-core" }
api-vault-audit = { path = "../api-vault-audit" }
sqlx      = { workspace = true }
tokio     = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
ulid      = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
secrecy   = { workspace = true }
zeroize   = { workspace = true }
async-trait = { workspace = true }
age = "0.11"
rmp-serde = "1"
tempfile = "3"
api-vault-crypto = { path = "../api-vault-crypto" }
api-vault-charter = { path = "../api-vault-charter" }
x25519-dalek = { version = "2", features = ["static_secrets"] }
bech32 = "0.9"

[dev-dependencies]
tokio = { workspace = true }
sqlx  = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "uuid"] }
api-vault-core = { path = "../api-vault-core" }
