[package]
name = "secretbank-app"
version = "0.1.0-pre15"
description = "Secretbank runtime — Tauri builder and command registration"
authors = ["secretbank contributors"]
edition = "2021"

[lib]
name = "secretbank_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["tauri-plugins"]
tauri-plugins = [
    "dep:tauri-plugin-sql",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-os",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-http",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-biometric",
]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }

sqlx = { workspace = true }
secretbank-core = { path = "../secretbank-core" }
secretbank-storage = { path = "../secretbank-storage" }
secretbank-crypto = { path = "../secretbank-crypto" }
secretbank-connectors = { path = "../secretbank-connectors" }
secretbank-feeds = { path = "../secretbank-feeds" }
secretbank-railguard = { path = "../secretbank-railguard" }
secretbank-audit = { path = "../secretbank-audit" }
secretbank-supply = { path = "../secretbank-supply" }
secretbank-charter = { path = "../secretbank-charter" }
secretbank-nm-host = { path = "../secretbank-nm-host" }
tokio-util = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Relay client (M8 Auth — services/relay_client.rs)
reqwest = { workspace = true }
url = "2"

# Relay salt (base64url) → KDF (T085)
base64 = { workspace = true }

# Tauri plugins (optional — disabled in test builds to skip problematic build scripts)
tauri-plugin-sql      = { version = "2", features = ["sqlite"], optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-shell    = { version = "2", optional = true }
tauri-plugin-os       = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-http     = { version = "2", optional = true }
tauri-plugin-fs       = { version = "2", optional = true }

# updater + single-instance: desktop-only (Windows, macOS, Linux).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }

# biometric: mobile-only (Android, iOS)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = { version = "2", optional = true }

[dev-dependencies]
secretbank-storage = { path = "../secretbank-storage", features = ["mock"] }
# test-util: tokio::time::pause / advance / start_paused 사용을 위해 필요
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tempfile = "3"
secrecy = { workspace = true }
wiremock = "0.6"
ulid = { workspace = true }
