[package]
name = "secretbank-audit"
version = "0.1.0-pre18"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
ulid = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }
