[package]
name = "secretbank-connectors"
version = "0.1.0-pre13"
edition = "2021"

[features]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
csv = { workspace = true }
url = { workspace = true }
secretbank-core = { path = "../secretbank-core" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
