[package]
name = "secretbank-core"
version = "0.1.0-pre18"
edition = "2021"

[dependencies]
petgraph   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
ulid       = { workspace = true }
time       = { workspace = true }
thiserror  = { workspace = true }
secrecy    = { workspace = true }
zeroize    = { workspace = true }
