[package]
name = "secretbank-crypto"
version = "0.1.0-pre16"
edition = "2021"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Security / memory
secrecy = { workspace = true }
zeroize = { workspace = true }

# KDF
argon2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# AEAD (M9 sync — XChaCha20-Poly1305 wire-호환 with @noble/ciphers)
chacha20poly1305 = { workspace = true }

# X25519 ECDH (M9 device pairing — Phase G T092)
x25519-dalek = { workspace = true }

# OS Keyring
keyring = { workspace = true }
hex = { workspace = true }
