[package]
name = "secretbank-feeds"
version = "0.1.0-pre14"
edition = "2021"

[dependencies]
secretbank-core = { path = "../secretbank-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
feed-rs = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zxcvbn = "3.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
