[package]
name = "secretbank-nm-host"
version = "0.1.0-pre18"
edition = "2021"
description = "Secretbank Native Messaging Host — Chrome/Firefox extension bridge (stdio JSON protocol)"
license = "AGPL-3.0-or-later"

[[bin]]
name = "secretbank-nm-host"
path = "src/main.rs"

[lib]
name = "secretbank_nm_host"
path = "src/lib.rs"

[dependencies]
# Async runtime — io-std (stdin/stdout 비동기), signal (ctrl-c)
# `net`: bridge_client.rs 의 TcpStream (확장 브리지). feature unification 에
# 의존하지 않도록 직접 사용하는 feature 를 명시 (resolver 2 격리/플랫폼 대응).
tokio = { workspace = true, features = ["net"] }

# JSON 직렬화
serde = { workspace = true }
serde_json = { workspace = true }

# 에러 처리
thiserror = { workspace = true }

# 로깅 (stdout 오염 금지 — stderr 전용)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# B-4 페어링 암호화 — secretbank-crypto 재사용
secretbank-crypto = { path = "../secretbank-crypto" }

# B-4 비밀키 메모리 보호
secrecy = { workspace = true }

# B-4 페어링 protocol — 공개키 base64 인코딩/디코딩
base64 = { workspace = true }

# B-4 timing-safe 공개키 비교
subtle = { workspace = true }

# B-7 session token HMAC-SHA256
hmac = { workspace = true }

# B-7 CSPRNG nonce 생성
rand = { workspace = true }

# B-7 SHA-256 (HMAC 내부)
sha2 = { workspace = true }

# B-4 XChaCha20-Poly1305 (고정 nonce 테스트용 직접 접근)
chacha20poly1305 = { workspace = true }

# B-4 X25519 ECDH (RFC 7748 test vector 직접 검증용)
x25519-dalek = { workspace = true }

# B-2: 설치 경로 해석 (3 OS 통일 helper)
dirs = "5"

[target.'cfg(windows)'.dependencies]
# B-2 Windows 레지스트리 등록
winreg = "0.56"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
# B-2 integration test: 임시 디렉토리 기반 mock filesystem
tempfile = "3"
