[package]
name = "secretbank-supply"
version = "0.1.0-pre16"
edition = "2021"
description = "Secretbank — supply chain risk graph (package / advisory / usage)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

secretbank-core = { path = "../secretbank-core" }

# RFC3339 parsing
time = { workspace = true }

# Manifest parsers
toml = { workspace = true }
semver = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
